HOMEPAGE: fixed squishy slider image

--- a/src/documents/styles/modules/landing.css.less
+++ b/src/documents/styles/modules/landing.css.less
@@ -114,7 +114,7 @@
 					width: auto;
 				}
 				@media screen and (max-width: 430px) {
-					max-height: auto;
+					max-height: none;
 					width: 100%;
 				}
 			}
